<resources>
    <string name="app_name">BooksRental_mobile</string>
    <string name="logo_app_name">Wypożyczalnia książek</string>
    <string name="login_activity_title">Logowanie</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Hasło</string>
    <string name="login_button">Zaloguj</string>
    <string name="back_button">Wróć</string>
    <string name="user_menu_title">Co chciałbyś zrobić?</string>
    <string name="show_rentals_button">Sprawdź książki w wypożyczalniach</string>
    <string name="show_author_books_button">Wyszukaj książki danego autora</string>
    <string name="search_books_by_name_button">Wyszukaj książki po tytule</string>
    <string name="rental_list_title">Znalezione wypożyczalnie</string>
    <string name="logout_button">Wyloguj</string>
    <string name="rental_book_list">Książki znalezione w wypożyczalni</string>
    <string name="book_info">Podstawowe informacje</string>
    <string name="thick_cover">Okładka gruba</string>
    <string name="thin_cover">Okładka cienka</string>
    <string name="description">Opis</string>
    <string name="pages">Strony -&#160;</string>
    <string name="publishing_house">Wydawnictwo -&#160;</string>
    <string name="rental_place">Miejsce -&#160;</string>
    <string name="signup_title">Rejestracja</string>
    <string name="hint_name">Imię</string>
    <string name="hint_last_name">Nazwisko</string>
    <string name="hint_password_repeat">Powtórz hasło</string>
    <string name="hint_email">E-mail</string>
    <string name="register_button">Zarejestruj</string>
    <string name="registration_button">Rejestracja</string>
</resources>
