<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlueLight"
    tools:context=".Activities.User.UserMainMenu">

    <TextView
        android:id="@+id/userMenuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/josefinsansbold"
        android:text="@string/user_menu_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userMenuTitle">

        <Button
            android:id="@+id/show_rentals_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_bar_backgroud"
            android:fontFamily="@font/josefinsansbold"
            android:text="@string/show_rentals_button"
            android:textAllCaps="false"
            android:textColor="@color/colorBlueLight"
            android:textSize="14sp" />

        <Button
            android:id="@+id/show_author_books_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_bar_backgroud"
            android:fontFamily="@font/josefinsansbold"
            android:text="@string/show_author_books_button"
            android:textAllCaps="false"
            android:textColor="@color/colorBlueLight"
            android:textSize="14sp" />

        <Button
            android:id="@+id/search_books_by_name_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_bar_backgroud"
            android:fontFamily="@font/josefinsansbold"
            android:text="@string/search_books_by_name_button"
            android:textAllCaps="false"
            android:textColor="@color/colorBlueLight"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/back_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="176dp"
        android:background="@drawable/button_bottom_background"
        android:fontFamily="@font/josefinsansbold"
        android:text="@string/back_button"
        android:textAllCaps="false"
        android:textColor="@color/colorBlueLight"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>